# odoo-backup-app

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml
architecture/: index.html
assets/: extra.css
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 11e66d828531_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: account.py  auth.py  backups.py  channels.py  cloud.py  deps.py  instances.py  jobs.py  notify_bindings.py  settings.py
backend/app/core/: cron.py  retention.py  security.py  startup.py  timezone.py  url_parser.py
backend/app/models/: __init__.py  audit.py  backup.py  cloud.py  instance.py  job.py  notify.py  user.py
backend/app/schemas/: backup.py  cloud.py  instance.py  job.py  notify.py  user.py
backend/app/services/backup/: base.py  odoo_endpoint.py  pg_dump.py  verify.py
backend/app/services/cloud/: base.py  drive.py  dropbox_provider.py  onedrive.py  sync.py
backend/app/services/notify/: dispatcher.py  smtp.py  telegram.py
backend/app/tasks/: backup_tasks.py  celery_app.py  cloud_tasks.py  notify_tasks.py  scheduler.py
backend/app/templates/: shell.html
backend/tests/: conftest.py  test_api_account.py  test_api_auth.py  test_api_auth_extra.py  test_api_backups.py  test_api_channels.py  test_api_cloud.py  test_api_instances.py  test_api_jobs.py  test_api_notify_bindings.py  test_api_settings.py  test_backup_strategies.py  test_cloud_sync.py  test_cron.py  test_dispatcher.py  test_notify.py  test_notify_services.py  test_notify_tasks.py  test_pg_dump.py  test_retention.py  test_security.py  test_url_parser.py  test_verify.py
backend/tests/_test_data/: secret.key
cloud-sync/: index.html
docs/: architecture.md  cloud-sync.md  faq.md  first-run.md  index.md  installation.md  jobs.md  notifications.md  retention.md  security.md
faq/: index.html
first-run/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: client.ts  index.ts
frontend/src/assets/: theme.scss
frontend/src/components/: ClockBadge.vue  CronBuilder.vue  InstanceCard.vue  SetupBanner.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  ui.ts
frontend/src/views/: AccountView.vue  AppShell.vue  BackupsView.vue  ChannelsView.vue  CloudView.vue  DashboardView.vue  FirstLoginView.vue  InstanceDetailView.vue  InstancesView.vue  JobEditorView.vue  LoginView.vue  ResetPasswordView.vue  SettingsView.vue
installation/: index.html
jobs/: index.html
notifications/: index.html
retention/: index.html
search/: search_index.json
security/: index.html
