[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-backup-app"
version = "0.1.0"
description = "Self-hosted backup orchestration for one or many Odoo instances — scheduled, audited, notified, and cloud-synced."
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [{ name = "Çağatay Üresin", email = "cagatayuresin@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "celery>=5.4.0",
    "celery-redbeat>=2.2.0",
    "redis>=5.0.4",
    "croniter>=2.0.5",
    "pytz>=2024.1",
    "cryptography>=42.0.8",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.3",
    "aiosmtplib>=3.0.1",
    "google-api-python-client>=2.133.0",
    "google-auth-oauthlib>=1.2.0",
    "dropbox>=12.0.2",
    "msal>=1.29.0",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    "starlette>=0.37.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.1",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "bandit[toml]>=1.7.9",
    "vulture>=2.11",
    "deptry>=0.16.2",
    "pip-audit>=2.7.3",
    "types-pytz>=2024.1.0.20240417",
    "types-aiofiles>=23.2.0.20240403",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "PL",       # pylint
    "RUF",      # ruff-specific
    "S",        # flake8-bandit (security)
    "T20",      # flake8-print
    "ERA",      # eradicate (commented-out code)
    "C90",      # mccabe complexity
]
ignore = [
    "S101",    # assert — allowed in tests via per-file-ignores
    "PLR2004", # magic value comparison — allowed in tests
    "B008",    # function call in default arg — FastAPI uses this pattern
    "UP007",   # X | Y union syntax — keep Optional for clarity in some places
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S105", "S106"]
"alembic/*" = ["ERA001", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-locals = 15

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy — strict mode
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "celery_redbeat.*",
    "croniter.*",
    "dropbox.*",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "msal.*",
    "argon2.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Bandit — security
# ---------------------------------------------------------------------------
[tool.bandit]
targets = ["app"]
skips = ["B101"]   # assert — covered by ruff per-file-ignores for tests
exclude_dirs = ["tests", "alembic"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

# ---------------------------------------------------------------------------
# Vulture — dead code
# ---------------------------------------------------------------------------
[tool.vulture]
min_confidence = 80
paths = ["app"]
ignore_decorators = ["@app.get", "@app.post", "@app.put", "@app.delete", "@app.patch",
                     "@router.get", "@router.post", "@router.put", "@router.delete", "@router.patch",
                     "@celery_app.task", "@validator", "@field_validator", "@model_validator",
                     "@event.listens_for"]
